上传照片初试版
1、完善与后台的参数传递对接 但是没有验证是否能够正常上传照片并保存到指定文件夹中！
2、App功能基本完成
3、后续需要将其他的数据操作转移到django 中
4、https问题 未处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TakePhotos.PhotoActivity"><!-- MAIN -->
 
+        </activity>
         <activity android:name=".TakePhotos.TakePhotoActivity"><!-- MAIN -->
 
         </activity>
