--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 
     implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     implementation 'com.google.android.material:material:1.0.0'
     implementation files('libs/core-3.0.0.jar')
