--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,11 +49,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.MaterialComponents.Light"
         android:usesCleartextTraffic="true"
         android:grantUriPermissions="true"
 
         >
+       <!-- android:theme="@style/AppTheme"-->
 
         <provider
             android:name="androidx.core.content.FileProvider"
